add new file structure
