# oldStructure/cart.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const pool = require('../db');
 const { DateTime } = require('luxon');
+const isAuthorized = require('../modules/isAuthorized');
 
 
 const cartRouter = express.Router();
@@ -13,7 +14,7 @@ const deleteProduct = async (cartId, productId) => {
     return await pool.query('DELETE FROM carts_products WHERE cart_id = $1 AND product_id = $2', [cartId, productId]);
 }
 
-cartRouter.param('customerId', async (req, res, next) => {
+cartRouter.param('customerId', isAuthorized, async (req, res, next) => {
     try {
         const { customerId } = req.params;
         req.customerId = customerId;
@@ -30,13 +31,13 @@ cartRouter.param('customerId', async (req, res, next) => {
     }
 });
 
-cartRouter.param('cartId', async (req, res, next) => {
+cartRouter.param('cartId', isAuthorized, async (req, res, next) => {
     try {
         const { cartId } = req.params;
         req.cartId = cartId;
-        const exists = await pool.query('SELECT * FROM carts WHERE id = $1', [cartId]);
+        const exists = await pool.query('SELECT * FROM carts WHERE id = (SELECT id FROM carts WHERE customer_id = $1', [req.customerId]);
         if(!exists.rows?.length) {
-            const error = new Error(`Cart with id ${cartId} does not exist`);
+            const error = new Error(`Cart for customer id ${req.customerId} does not exist`);
             error.status = 404;
             throw error;
         };
@@ -68,8 +69,9 @@ cartRouter.param('productId', async (req, res, next) => {
 cartRouter.post('/new/:customerId', async (req, res, next) => {
     try {
         const date = DateTime.now().toISODate();
-        await pool.query('INSERT INTO carts(customer_id, created_date, total_cost) VALUES ($1, $2, null) RETURNING *', [req.customerId, date]);
-        res.json('Cart created successfully');
+        const data = await pool.query('INSERT INTO carts(customer_id, created_date, total_cost) VALUES ($1, $2, null) RETURNING *', [req.params.customerId, date]);
+        const cartId = data.rows[0].id;
+        res.json(`Cart with id ${cartId} created successfully - PLEASE TAKE NOTE OF THIS ID`);
     } catch (err) {
         next(err);
     };
@@ -77,9 +79,9 @@ cartRouter.post('/new/:customerId', async (req, res, next) => {
 
 
 //delete cart (after cart is submitted the temporary cart is no longer needed);
-cartRouter.delete('/delete/:cartId', async (req, res, next) => {
+cartRouter.delete('/delete/:customerId/:cartId', async (req, res, next) => {
     try {
-        await pool.query('DELETE FROM carts WHERE id = $1', [req.cartId]);
+        await pool.query('DELETE FROM carts WHERE id = $1', [req.params.cartId]);
         res.json('Cart has been deleted successfully');
     } catch (err) {
         next(err);
@@ -88,9 +90,9 @@ cartRouter.delete('/delete/:cartId', async (req, res, next) => {
 
 
 // get all products from cart (to display)
-cartRouter.get('/products/:cartId', async (req, res, next) => {
+cartRouter.get('/products/:customerId/:cartId', async (req, res, next) => {
     try {
-        const cartProducts = await pool.query('SELECT product_name, price_per_unit, quantity, image FROM carts_products JOIN products ON products.id = carts_products.product_id WHERE cart_id = $1', [req.cartId]);
+        const cartProducts = await pool.query('SELECT product_name, price_per_unit, quantity, image FROM carts_products JOIN products ON products.id = carts_products.product_id WHERE cart_id = $1', [req.params.cartId]);
         res.json(cartProducts.rows);
     } catch (err) {
         next(err);
@@ -98,9 +100,9 @@ cartRouter.get('/products/:cartId', async (req, res, next) => {
 });
 
 //add a new product to cart
-cartRouter.post('/products/add/:cartId/:productId', async (req, res, next) => {
+cartRouter.post('/products/add/:customerId/:cartId/:productId', async (req, res, next) => {
     try {
-        await pool.query('INSERT INTO carts_products(cart_id, product_id, quantity) VALUES ($1, $2, 1)', [req.cartId, req.productId]);
+        await pool.query('INSERT INTO carts_products(cart_id, product_id, quantity) VALUES ($1, $2, 1)', [req.params.cartId, req.params.productId]);
         // update total_cost in carts table
         updateTotalCost(req.cartId);
         res.json('Added product to cart successfully');
@@ -110,10 +112,10 @@ cartRouter.post('/products/add/:cartId/:productId', async (req, res, next) => {
 })
 
 //add one to a product quantity
-cartRouter.put('/products/increment/:cartId/:productId', async (req, res, next) => {
+cartRouter.put('/products/increment/:customerId/:cartId/:productId', async (req, res, next) => {
     try {
-        await pool.query('UPDATE carts_products SET quantity = quantity + 1 WHERE cart_id = $1 AND product_id = $2 RETURNING *', [req.cartId, req.productId]);
-        updateTotalCost(req.cartId);
+        await pool.query('UPDATE carts_products SET quantity = quantity + 1 WHERE cart_id = $1 AND product_id = $2 RETURNING *', [req.params.cartId, req.params.productId]);
+        updateTotalCost(req.params.cartId);
         res.json('Added one to product quantity');
     } catch (err) {
         next(err);
@@ -121,26 +123,26 @@ cartRouter.put('/products/increment/:cartId/:productId', async (req, res, next) 
 })
 
 // minus one from a product quantity
-cartRouter.put('/products/decrement/:cartId/:productId', async (req, res, next) => {
+cartRouter.put('/products/decrement/:customerId/:cartId/:productId', async (req, res, next) => {
     try {
-        const product = await pool.query('UPDATE carts_products SET quantity = quantity - 1 WHERE cart_id = $1 AND product_id = $2 RETURNING *', [req.cartId, req.productId]);
-        if (product.rows.quantity === 0) {
-            deleteProduct(req.cartId, req.productId);//deletes product if quantity is 0;
-            return;
+        const data = await pool.query('SELECT quantity FROM carts_products WHERE cart_id = $1 AND product_id = $2', [req.params.cartId, req.params.productId]);
+        if (data.rows[0].quantity === 1) {
+            deleteProduct(req.params.cartId, req.params.productId);//deletes product if quantity is 0;
+            res.json('Subtracted one from quantity of one, product now removed from cart');
         }
-        updateTotalCost(cartId);
+        const product = await pool.query('UPDATE carts_products SET quantity = quantity - 1 WHERE cart_id = $1 AND product_id = $2', [req.params.cartId, req.params.productId]);
+        updateTotalCost(req.params.cartId);
         res.json('Subtracted one from product quantity');
-        res.json(product);
     } catch (err) {
         next(err);
     }
 })
 
 //delete product in cart
-cartRouter.delete('/products/delete/:cartId/:productId', async (req, res, next) => {
+cartRouter.delete('/products/delete/:customerId/:cartId/:productId', async (req, res, next) => {
     try {
-        deleteProduct(req.cartId, req.productId);
-        updateTotalCost(req.cartId);
+        deleteProduct(req.params.cartId, req.params.productId);
+        updateTotalCost(req.params.cartId);
         res.json(`Product successfully deleted`);
     } catch (err) {
         next(err);
